--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
 </head>
 <body>
     <main>
-        <h2>hi</h2>
+        <section class="main-data">
+            <div class="inputs flex">
+                <input class="title-input" type="text" min="5" max="20" placeholder="Title">
+                <input class="author-input" type="text" min="5" max="20" placeholder="Author">
+                <button class="add-btn">Add</button>
+            </div>
+        </section>
     </main>
-    <script src="./app.js"></script>
+    <script src="./app.js   "></script>
 </body>
 </html>
