--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 </head>
 <body>
     <main>
-        <section class="main-data">
+        <section class="main-data flex">
             <div class="inputs flex">
                 <input class="title-input" type="text" min="5" max="20" placeholder="Title">
                 <input class="author-input" type="text" min="5" max="20" placeholder="Author">
                 <button class="add-btn">Add</button>
+            </div>
+            <div>
+                <ul class="lst flex"></ul>
             </div>
         </section>
     </main>
